# serde-field-attributes

./: .gitignore  Cargo.toml  README.md
src/: integer_or_integer_str.rs  integer_str.rs  integer_str_array.rs  lib.rs  optional_integer_str.rs  optional_integer_str_array.rs  optional_range.rs  optional_ratio_i64.rs  optional_ratio_u64.rs  optional_timestamp_millis_str.rs  optional_timestamp_str.rs  optional_usize.rs  range.rs  ratio_i64.rs  ratio_u64.rs  represented_as_str.rs  timestamp_millis_str.rs  timestamp_str.rs
