[package]
name = "serde-field-attributes"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
description = "Miscellaneous field attributes for Serde"
homepage = "https://github.com/travisbrown/serde-field-attributes"
repository = "https://github.com/travisbrown/serde-field-attributes"
keywords = ["serde"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[dependencies]
chrono = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
